<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewUserLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dashWelcomeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/foundersgrotesk_regular"
                android:text="@string/existing_user_login_message"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/appTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/foundersgrotesk_bold"
                android:text="@string/app_name"
                android:textColor="#FFFFFF"
                android:textSize="48sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="40dp"
            android:paddingTop="40dp"
            android:paddingRight="50dp">

            <EditText
                android:id="@+id/userAgeEntry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_corners"
                android:fontFamily="@font/foundersgrotesk_regular"
                android:hint="@string/username_label"
                android:inputType="textPersonName"
                android:padding="20dp"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/contentEntry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_corners"
                android:fontFamily="@font/foundersgrotesk_regular"
                android:hint="@string/password_label"
                android:inputType="textPersonName"
                android:padding="20dp"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/TextView2"
                android:layout_width="wrap_content"
                android:layout_height="181dp"
                android:layout_gravity="center"
                android:fontFamily="@font/foundersgrotesk_regular"
                android:gravity="center|clip_vertical"
                android:text="@string/devMessage"
                android:textColor="#FFFFFF"
                android:textSize="11sp"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="40dp"
            android:paddingRight="40dp">

            <Button
                android:id="@+id/newUserLoginButton"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:backgroundTint="@color/orange"
                android:fontFamily="@font/foundersgrotesk_bold"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/create_account_label"
                android:textSize="16sp"
                app:cornerRadius="50dp" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>