<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRunActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/addRunTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:fontFamily="@font/foundersgrotesk_bold"
                    android:paddingBottom="30dp"
                    android:text="@string/add_run_label"
                    android:textColor="#FFFFFF"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/exitButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:contentDescription="x icon"
                    android:src="@drawable/x_icon" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:paddingLeft="40dp"
                android:paddingRight="40dp">

                <Button
                    android:id="@+id/newRunButton"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/pink"
                    android:fontFamily="@font/foundersgrotesk_bold"
                    android:text="@string/new_run_label"
                    android:textSize="16sp"
                    app:cornerRadius="50dp" />

                <Button
                    android:id="@+id/pastRunButton"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:backgroundTint="#FF9F9F"
                    android:fontFamily="@font/foundersgrotesk_bold"
                    android:text="@string/past_run_label"
                    android:textSize="16sp"
                    app:cornerRadius="50dp" />

                <Button
                    android:id="@+id/futureRunButton"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/light_pink"
                    android:fontFamily="@font/foundersgrotesk_bold"
                    android:text="@string/future_run_label"
                    android:textSize="16sp"
                    app:cornerRadius="50dp" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/runStatsRecycler"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>